--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.egg-info
 *.pot
 *.py[co]
+package-lock.json
 .tox/
 __pycache__
 MANIFEST
@@ -72,3 +73,4 @@ test/dummy_rails/public/assets/
 .DS_Store
 node_modules
 /.idea
+testbed/
