--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,23 @@
 {
     "name": "Revolution-Server",
     "version": "1.0.0",
-    "description":"basic http2 rest server implemented with fastify",
-    "main":"index.js",
+    "description": "basic http2 rest server implemented with fastify",
+    "main": "index.js",
     "dependencies": {
-        "cors":"^2.8.5",
-        "fastify": "^2.14.1",
-        "fastify-auth":"^0.7.2",
-        "fastify-cli":"^1.5.0",
-        "fastify-cors":"^3.0.3",
-        "fastify-jwt":"^1.4.0",
-        "fastify-multipart": "1.0.6",
-        "fastify-sse":"git+https://github.com/lolo32/fastify-sse.git#c632456",
-        "fastify-url-data": "^2.4.0",
-        "file-type": "^14.6.0",
-        "long":"^4.0.0",
-        "minimist":"^1.2.5",
-        "underscore":"^1.10.2"
+        "cors": "^2.8.5",
+        "fastify": "^3.4.1",
+        "fastify-auth": "^1.0.1",
+        "fastify-cli": "^2.2.0",
+        "fastify-cors": "^4.1.0",
+        "fastify-jwt": "^2.1.3",
+        "fastify-multipart": "3.2.0",
+        "fastify-sse": "git+https://github.com/lolo32/fastify-sse.git#c632456",
+        "fastify-sse-v2": "^2.0.2",
+        "fastify-url-data": "^3.0.3",
+        "file-type": "^15.0.1",
+        "long": "^4.0.0",
+        "minimist": "^1.2.5",
+        "underscore": "^1.11.0"
     },
     "devDependencies": {},
     "scripts": {
