--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -11,51 +11,50 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~9.1.9",
-        "@angular/cdk": "~9.1.9",
-        "@angular/common": "~9.1.9",
-        "@angular/compiler": "~9.1.9",
-        "@angular/core": "~9.1.9",
-        "@angular/flex-layout": "~9.1.9",
-        "@angular/forms": "~9.1.9",
-        "@angular/http": "~9.1.9",
-        "@angular/material": "~9.1.9",
-        "@angular/platform-browser": "~9.1.9",
-        "@angular/platform-browser-dynamic": "~9.1.9",
-        "@angular/pwa": "~9.1.9",
-        "@angular/router": "~9.1.9",
-        "@angular/service-worker": "~9.1.9",
+        "@angular/animations": "~10.1.3",
+        "@angular/cdk": "~10.2.2",
+        "@angular/common": "~10.1.3",
+        "@angular/compiler": "~10.1.3",
+        "@angular/core": "~10.1.3",
+        "@angular/flex-layout": "~10.0.0-beta.32",
+        "@angular/forms": "~10.1.3",
+        "@angular/material": "~10.2.2",
+        "@angular/platform-browser": "~10.1.3",
+        "@angular/platform-browser-dynamic": "~10.1.3",
+        "@angular/pwa": "~0.1001.3  ",
+        "@angular/router": "~10.1.3",
+        "@angular/service-worker": "~10.1.3",
         "core-js": "^3.6.5",
         "material-design-icons": "^3.0.1",
         "material-icons": "^0.3.1",
-        "rxjs": "~6.5.5.",
-        "tslib": "^2.0.0",
+        "rxjs": "~6.6.3",
+        "tslib": "^2.0.1",
         "zone.js": "~0.10.3",
-        "d3": "^5.16.0",
+        "d3": "^6.2.0",
         "d3-sankey": "0.12.3",
         "@types/d3-sankey": "0.11.0",
-        "ajv": "^6.12.2"
+        "ajv": "^6.12.5"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.901.7",
-        "@angular/cli": "~9.1.7",
-        "@angular/compiler-cli": "~9.1.9",
-        "@angular/language-service": "~9.1.9",
-        "@types/node": "~14.0.9",
+        "@angular-devkit/build-angular": "~0.1001.3",
+        "@angular/cli": "~10.1.3",
+        "@angular/compiler-cli": "~10.1.3",
+        "@angular/language-service": "~10.1.3",
+        "@types/node": "~14.11.2",
         "@types/d3": "^5.7.2",
-        "@types/jasmine":"~3.5.10",
-        "@types/jasminewd2": "2.0.3",
-        "codelyzer":"5.2.2",
-        "jasmine-core":"~3.5.0",
-        "jasmine-spec-reporter": "5.0.2",
-        "karma":"~5.0.9",
-        "karma-chrome-launcher":"~3.1.0",
-        "karma-coverage-istanbul-reporter": "3.0.2",
-        "karma-jasmine": "3.1.1",
+        "@types/jasmine": "~3.5.14",
+        "@types/jasminewd2": "2.0.8",
+        "codelyzer": "6.0.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "6.0.0",
+        "karma": "~5.2.2",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "3.0.3",
+        "karma-jasmine": "4.0.1",
         "karma-jasmine-html-reporter": "1.5.4",
         "protractor": "7.0.0",
-        "ts-node": "8.10.1",
+        "ts-node": "9.0.0",
         "tslint": "6.1.2",
-        "typescript": "3.4.3"
+        "typescript": "4.0.3"
     }
 }
