--- a/frontend/my-app/angular.json
+++ b/frontend/my-app/angular.json
@@ -16,7 +16,6 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "preserveSymLinks": true,
                         "outputPath": "dist/my-app",
                         "index": "src/index.html",
                         "main": "src/main.ts",
@@ -28,7 +27,7 @@
                         ],
                         "styles": [
                             "src/styles-app-loading.scss",
-                            "src/stles.scss",
+                            "src/styles.scss",
                             "src/theme.scss"
                         ],
                         "scripts": []
@@ -61,7 +60,7 @@
                     }
                 },
                 "serve": {
-                    "builder": "@angular=devkit/build-angular:dev-server",
+                    "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
                         "browserTarget": "my-app:build",
                         "host": "0.0.0.0"
